# qplotmarker

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  QPlotMarkerConfig.cmake.in  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUESTS_TEMPLATE/: config.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  config.yml  feature.md
.github/PULL_REQUEST_TEMPLATES/: config.yml  docs.md
docs/qch/: qplotmarker.qch  qplotmarker.qhp
docs/qdoc/: api_reference.qdoc  examples.qdoc  markers.qdoc  overview.qdoc  qplotmarker.qdocconf
docs/qdoc/examples/: base_example.qdoc  group_marker.qdoc  inverted_marker.qdoc  move_marker.qdoc  plotmarker_distance.qdoc  show_coord_marker.qdoc
docs/qdoc/style/: style.css
docs/qdoc/tutorials/: advanced.qdoc  getting_started.qdoc
examples/: CMakeLists.txt
examples/base_example/: CMakeLists.txt  main.cpp
examples/group_marker/: CMakeLists.txt  controlwindow.cpp  controlwindow.hpp  main.cpp
examples/inverted_markers/: CMakeLists.txt  main.cpp
examples/move_marker/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
examples/plotmarker_distance/: CMakeLists.txt  main.cpp
examples/show_coord_marker/: CMakeLists.txt  chart_event_filter.cpp  chart_event_filter.hpp  main.cpp
include/QPlotMarker/: QPlotMarker  QPlotMarkerDistance  QPlotMarkerGroup  qplot_marker_group.hpp  qplotmarker.hpp  qplotmarker_distance.hpp  qplotmarker_global.hpp  qplotmarker_group.hpp
resources/: marker_icons.qrc
src/: CMakeLists.txt  qplot_marker_group.cpp  qplot_marker_p.cpp  qplot_marker_p.hpp  qplotmarker.cpp  qplotmarker_distance.cpp  qplotmarker_distance_p.cpp  qplotmarker_distance_p.hpp  qplotmarker_group.cpp  qplotmarker_p.cpp  qplotmarker_p.hpp
src/effects/: fast_colorize_effect.cpp  fast_colorize_effect.hpp  glow_effect.cpp  glow_effect.hpp
src/entity/: graphics_coord_item.cpp  graphics_coord_item.hpp  movable_button.cpp  movable_button.hpp
src/utility/: plot_geometry_utils.cpp  plot_geometry_utils.hpp
tests/: CMakeLists.txt
tests/move_by_points/: CMakeLists.txt  main.cpp
tests/test_move_by_points/: CMakeLists.txt  chart_view_panner.hpp  main.cpp
